Creando menu hamburguesa y config basicas css

--- a/index.html
+++ b/index.html
@@ -13,3 +13,20 @@
     <link rel="stylesheet" href="./assets/css/styles.css">
 <link rel="icon" href="./assets/images/vacio.png">
 </head>
+
+<header>
+    <nav>
+     <input type="checkbox" id="menu-hamburguesa">
+     <label for="menu-hamburguesa">
+         <img src="./assets/images/menu 1.svg" alt="menu-hamburguesa">
+     </label>
+ 
+        <ul>
+            <li><a href="https://www.facebook.com" class="letras-home">Home</a></li>
+            <li><a href="">Acerca de mí</a></li>
+            <li><a href="">Mis habilidades</a></li>
+            <li><a href="">Experiencia</a></li>
+            <li><a href="">Portafolio</a></li>
+            <li><a href="">Contacto</a></li>
+        </ul>
+    </nav>
