Agregando esqueleto html y empezadno a agregar estilos css

--- a/index.html
+++ b/index.html
@@ -30,3 +30,70 @@
             <li><a href="">Contacto</a></li>
         </ul>
     </nav>
+    <br>
+   <h1>Mobile App <br> Designer</h1>
+   <div><img src="./assets/images/cib_linkedin-in.svg" alt="logo-linkdin" class="logos"></div>
+   <div><img src="./assets/images/ant-design_instagram-filled.svg" alt="logo-instagram" class="logos"></div>
+   <div><img src="./assets/images/ant-design_twitter-outlined.svg" alt="logo-twitter" class="logos"></div>
+  
+   <div><img src ="" alt="" class=""></div>
+
+   <div class="circulo1"></div>
+
+  </header>
+<br>
+  <body>
+      <h2>Acerca de mí</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis accusamus quidem, 
+          alias voluptate iste animi dignissimos quis in corrupti sit nam doloribus tempore non 
+          necessitatibus ullam? Consequuntur nihil odit aliquid sint error beatae enim ut,
+          quaerat perspiciatis ducimus culpa atque alias qui nisi eligendi harum? Vero
+          magni veniam excepturi vel.</p>
+          <br>
+       <h2>Mis habilidades</h2> 
+       <div class="circulo2"></div>
+       <div class="circulo3"></div>
+       <br>
+       <h2>Experiencia</h2>  
+       <section>
+         <div><img src="./assets/images/ant-design_amazon-outlined.svg" alt="logo-amazon"></div>
+         <div></div>
+         <div></div>
+       </section>
+
+       <section>
+        <div><img src="./assets/images/cib_airbnb.svg" alt="logo-airbnb"></div>
+        <div></div>
+        <div></div>
+      </section>
+
+      <section>
+        <div><img src="./assets/images/akar-icons_google-fill.svg" alt="logo-google"></div>
+        <div></div>
+        <div></div>
+      </section>
+
+       <div class="fondo-verde">
+        <br>
+           <h2>Portafolio</h2>
+           <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis accusamus quidem, 
+            alias voluptate iste animi dignissimos quis in corrupti sit nam doloribus tempore non 
+            necessitatibus ullam? </div>
+
+       </div>
+       <br>
+       <h2>Contacto</h2>
+       <div class="circulo4"></div>
+       <div><img src="./assets/images/phone 3.svg" alt="numero-celular" class="logos-grandes"></div>
+       <span class="titulos-verdes">Número celular</span>
+       <span class="letras-grises">+52 4421730948</span>
+
+       <div><img src="./assets/images/mail 3.svg" alt="mail" class="logos-grandes"></div>
+       <span class="titulos-verdes" >Email</span>
+       <span class="letras-grises">ximenabar96@gmail.com</span>
+
+
+    <footer> <p>Hecho con ♥ en ACADEMLO</p> </footer>   
+  </body>
+  
+</html>
