creando contenedores de experiencia y alineandolos

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
    <div><img src="./assets/images/ant-design_instagram-filled.svg" alt="logo-instagram" class="logos"></div>
    <div><img src="./assets/images/ant-design_twitter-outlined.svg" alt="logo-twitter" class="logos"></div>
   
-   <div><img src ="" alt="" class=""></div>
+   <div><img src ="./assets/images/image.png" alt="foto-chava" class="encabezado"></div>
 
-   <div class="circulo1"></div>
+   <div class="circulo1 encabezado"></div>
 
   </header>
 <br>
@@ -55,23 +55,26 @@
        <div class="circulo3"></div>
        <br>
        <h2>Experiencia</h2>  
-       <section>
-         <div><img src="./assets/images/ant-design_amazon-outlined.svg" alt="logo-amazon"></div>
-         <div></div>
-         <div></div>
-       </section>
 
-       <section>
-        <div><img src="./assets/images/cib_airbnb.svg" alt="logo-airbnb"></div>
-        <div></div>
-        <div></div>
-      </section>
+      
+        <div class="contenedor-1">
+           <div><img src="./assets/images/ant-design_amazon-outlined.svg" alt="logo-amazon"></div>
+           <div class="cubo-medio letras-grises">UI designer<p>2015-2017</p></div>
+           <div><p class="años">2 años</p></div>
+        </div>
+      
 
-      <section>
-        <div><img src="./assets/images/akar-icons_google-fill.svg" alt="logo-google"></div>
-        <div></div>
-        <div></div>
-      </section>
+       <div class="contenedor-2">
+          <div><img src="./assets/images/cib_airbnb.svg" alt="logo-airbnb"></div>
+          <div class="cubo-medio letras-grises">Senior UX/UI<p>2017-2018</p></div>
+          <div><p class="años">1 año</p></div>
+       </div>
+
+       <div class="contenedor-3">
+          <div><img src="./assets/images/akar-icons_google-fill.svg" alt="logo-google"></div>
+          <div class="cubo-medio letras-grises">Product <br> designer<p>2018-Actualidad</p></div>
+          <div><p class="años">2 años</p></div>
+        </div>
 
        <div class="fondo-verde">
         <br>
@@ -94,6 +97,7 @@
 
 
     <footer> <p>Hecho con ♥ en ACADEMLO</p> </footer>   
+    <br>
   </body>
   
 </html>
