--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
        <div class="fondo-verde">
         <br>
            <h2>Portafolio</h2>
+           <br>
            <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis accusamus quidem, 
-            alias voluptate iste animi dignissimos quis in corrupti sit nam doloribus tempore non 
-            necessitatibus ullam? </div>
+            alias voluptate iste animi dignissimos. </div>
 
        </div>
        <br>
