separando head con padding y ajustando tamaño de logos

--- a/index.html
+++ b/index.html
@@ -32,15 +32,20 @@
     </nav>
     <br>
    <h1>Mobile App <br> Designer</h1>
-   <div><img src="./assets/images/cib_linkedin-in.svg" alt="logo-linkdin" class="logos"></div>
-   <div><img src="./assets/images/ant-design_instagram-filled.svg" alt="logo-instagram" class="logos"></div>
-   <div><img src="./assets/images/ant-design_twitter-outlined.svg" alt="logo-twitter" class="logos"></div>
-  
+   <br>
+   <div class="contenedor-logos">
+     <div class="logos"><img src="./assets/images/cib_linkedin-in.svg" alt="logo-linkdin"></div>
+     <br>
+     <div class="logos"><img src="./assets/images/ant-design_instagram-filled.svg" alt="logo-instagram"></div>
+     <br>
+     <div class="logos"><img src="./assets/images/ant-design_twitter-outlined.svg" alt="logo-twitter"></div>
+   </div>
+
    <div><img src ="./assets/images/image.png" alt="foto-chava" class="encabezado"></div>
 
    <div class="circulo1 encabezado"></div>
-
   </header>
+
 <br>
   <body>
       <h2>Acerca de mí</h2>
@@ -78,6 +83,7 @@
 
        <div class="fondo-verde">
         <br>
+
            <h2>Portafolio</h2>
            <br>
            <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis accusamus quidem, 
