alineacion 2 divs contenedores de contacto

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
      <div class="logos"><img src="./assets/images/ant-design_twitter-outlined.svg" alt="logo-twitter"></div>
    </div>
 
-   <div><img src ="./assets/images/image.png" alt="foto-chava" class="encabezado"></div>
+   <div class="imagen-chica"><img src ="./assets/images/image.png" alt="foto-chava" class="encabezado"></div>
 
    <div class="circulo1 encabezado"></div>
   </header>
@@ -49,6 +49,7 @@
 <br>
   <body>
       <h2>Acerca de mí</h2>
+      <br>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis accusamus quidem, 
           alias voluptate iste animi dignissimos quis in corrupti sit nam doloribus tempore non 
           necessitatibus ullam? Consequuntur nihil odit aliquid sint error beatae enim ut,
@@ -93,13 +94,18 @@
        <br>
        <h2>Contacto</h2>
        <div class="circulo4"></div>
-       <div><img src="./assets/images/phone 3.svg" alt="numero-celular" class="logos-grandes"></div>
-       <span class="titulos-verdes">Número celular</span>
-       <span class="letras-grises">+52 4421730948</span>
 
-       <div><img src="./assets/images/mail 3.svg" alt="mail" class="logos-grandes"></div>
+       <div class="contenedor-4">
+         <div class="logos-grandes"><img src="./assets/images/phone 3.svg" alt="numero-celular"></div>
+         <span class="titulos-verdes">Número celular</span>
+         <span class="letras-grises">+52 4421730948</span>
+       </div>
+
+       <div class="contenedor-5">
+       <div class="logos-grandes"><img src="./assets/images/mail 3.svg" alt="mail"></div>
        <span class="titulos-verdes" >Email</span>
        <span class="letras-grises">ximenabar96@gmail.com</span>
+       </div>
 
 
     <footer> <p>Hecho con ♥ en ACADEMLO</p> </footer>   
