agregando imagenes fitness sin acomodar

--- a/index.html
+++ b/index.html
@@ -65,26 +65,29 @@
       
         <div class="contenedor-1">
            <div><img src="./assets/images/ant-design_amazon-outlined.svg" alt="logo-amazon"></div>
-           <div class="cubo-medio letras-grises">UI designer<p>2015-2017</p></div>
+           <div class="letras-grises">UI designer<p>2015-2017</p></div>
            <div><p class="años">2 años</p></div>
         </div>
       
 
        <div class="contenedor-2">
           <div><img src="./assets/images/cib_airbnb.svg" alt="logo-airbnb"></div>
-          <div class="cubo-medio letras-grises">Senior UX/UI<p>2017-2018</p></div>
+          <div class="letras-grises">Senior UX/UI<p>2017-2018</p></div>
           <div><p class="años">1 año</p></div>
        </div>
 
        <div class="contenedor-3">
           <div><img src="./assets/images/akar-icons_google-fill.svg" alt="logo-google"></div>
-          <div class="cubo-medio letras-grises">Product <br> designer<p>2018-Actualidad</p></div>
+          <div class="letras-grises">Product <br> designer<p>2018-Actualidad</p></div>
           <div><p class="años">2 años</p></div>
         </div>
 
        <div class="fondo-verde">
         <br>
 
+        <div class="fondo-fitness">
+           <div class="imagen-fitness"><img src="./assets/images/image 11.jpg" alt="fitness-app-imagen"></div> 
+        </div>
            <h2>Portafolio</h2>
            <br>
            <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis accusamus quidem, 
