ultimos cambios lunes 7

--- a/index.html
+++ b/index.html
@@ -87,17 +87,30 @@
 
         <div class="fondo-fitness">
            <div class="imagen-fitness"><img src="./assets/images/image 11.jpg" alt="fitness-app-imagen"></div> 
+           <p class="letra-caja-fitness">Fitness App</p>
+           <br>
+           <br>
         </div>
+
+
            <h2>Portafolio</h2>
            <br>
            <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis accusamus quidem, 
             alias voluptate iste animi dignissimos. </div>
+
+     <div class="fondo-fitness-2">
+           <div class="imagen-fitness"><img src="./assets/images/Rectangle 47.jpg" alt="fitness-app-imagen"></div> 
+            <p class="letra-caja-fitness">Management App</p>
+            <br>
+            <br>
+    </div>
 
        </div>
        <br>
        <h2>Contacto</h2>
        <div class="circulo4"></div>
 
+    <div class="contendor-contactos">  
        <div class="contenedor-4">
          <div class="logos-grandes"><img src="./assets/images/phone 3.svg" alt="numero-celular"></div>
          <span class="titulos-verdes">Número celular</span>
@@ -109,7 +122,7 @@
        <span class="titulos-verdes" >Email</span>
        <span class="letras-grises">ximenabar96@gmail.com</span>
        </div>
-
+    </div> 
 
     <footer> <p>Hecho con ♥ en ACADEMLO</p> </footer>   
     <br>
