arreglando nav bar

--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
             <li><a href="">Contacto</a></li>
         </ul>
     </nav>
+
     <br>
+    <section class="seccion-header">
    <h1>Mobile App <br> Designer</h1>
    <div><img src="./assets/images/cib_linkedin-in.svg" alt="logo-linkdin" class="logos"></div>
    <div><img src="./assets/images/ant-design_instagram-filled.svg" alt="logo-instagram" class="logos"></div>
@@ -39,9 +41,11 @@
    <div><img src ="" alt="" class=""></div>
 
    <div class="circulo1"></div>
-
+  </section>
   </header>
 <br>
+
+
   <body>
       <h2>Acerca de mí</h2>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis accusamus quidem, 
