ultimos cambios martes 7 junio rama main

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 <link rel="icon" href="./assets/images/vacio.png">
 </head>
 
-<header>
+<body>
+ <header>
     <nav>
      <input type="checkbox" id="menu-hamburguesa">
      <label for="menu-hamburguesa">
@@ -33,16 +34,21 @@
 
     <br>
     <section class="seccion-header">
-   <h1>Mobile App <br> Designer</h1>
-   <div><img src="./assets/images/cib_linkedin-in.svg" alt="logo-linkdin" class="logos"></div>
-   <div><img src="./assets/images/ant-design_instagram-filled.svg" alt="logo-instagram" class="logos"></div>
-   <div><img src="./assets/images/ant-design_twitter-outlined.svg" alt="logo-twitter" class="logos"></div>
-  
-   <div><img src ="" alt="" class=""></div>
-
-   <div class="circulo1"></div>
-  </section>
+      <h1>Mobile App <br> Designer</h1>
+      <br>
+      <div class="contenedor-logos">
+        <div class="logos"><img src="./assets/images/cib_linkedin-in.svg" alt="logo-linkdin"></div>
+        <br>
+        <div class="logos"><img src="./assets/images/ant-design_instagram-filled.svg" alt="logo-instagram"></div>
+        <br>
+        <div class="logos"><img src="./assets/images/ant-design_twitter-outlined.svg" alt="logo-twitter"></div>
+      </div>
+   
+      <div class="imagen-chica"><img src ="./assets/images/image.png" alt="foto-chava" class="encabezado"></div>
+   
+      <div class="circulo1 encabezado"></div>
   </header>
+
 <br>
       <h2>Acerca de mí</h2>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis accusamus quidem, 
@@ -77,7 +83,7 @@
          <div><p class="años">2 años</p></div>
        </div>
 
-      <div class="fondo-verde">
+   <div class="fondo-verde">
        <br>
 
        <div class="fondo-fitness">
@@ -90,7 +96,14 @@
        <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis accusamus quidem, 
         alias voluptate iste animi dignissimos. </div>
 
-   </div>
+        <div class="fondo-fitness-2">
+          <div class="imagen-fitness"><img src="./assets/images/Rectangle 47.jpg" alt="fitness-app-imagen"></div> 
+           <p class="letra-caja-fitness">Management App</p>
+           <br>
+           <br>
+        </div>
+    </div>
+    
    <br>
    <h2>Contacto</h2>
    <div class="circulo4"></div>
