nuevos cambios miercoles

--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 
 
+
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -33,8 +36,12 @@
     </nav>
 
     <br>
-    <section class="seccion-header">
+    <section class="section-titulo">
       <h1>Mobile App <br> Designer</h1>
+    </section>
+
+    <br>
+    <section class="section-header">
       <br>
       <div class="contenedor-logos">
         <div class="logos"><img src="./assets/images/cib_linkedin-in.svg" alt="logo-linkdin"></div>
@@ -47,6 +54,7 @@
       <div class="imagen-chica"><img src ="./assets/images/image.png" alt="foto-chava" class="encabezado"></div>
    
       <div class="circulo1 encabezado"></div>
+      </section>
   </header>
 
 <br>
