corrigiendo tamaño de textos

--- a/index.html
+++ b/index.html
@@ -58,12 +58,14 @@
   </header>
 
 <br>
+  <section class="section-acerca">
       <h2>Acerca de mí</h2>
+      <br>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis accusamus quidem, 
           alias voluptate iste animi dignissimos quis in corrupti sit nam doloribus tempore non 
           necessitatibus ullam? Consequuntur nihil odit aliquid sint error beatae enim ut,
-          quaerat perspiciatis ducimus culpa atque alias qui nisi eligendi harum? Vero
-          magni veniam excepturi vel.</p>
+          quaerat perspiciatis ducimus culpa.</p>
+   </section>
           <br>
        <h2>Mis habilidades</h2> 
        <div class="circulo2"></div>
