encimando circulo1 sobre img

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
   </header>
 
 <br>
+
   <section class="section-acerca">
       <h2>Acerca de mí</h2>
       <br>
@@ -67,9 +68,12 @@
           quaerat perspiciatis ducimus culpa.</p>
    </section>
           <br>
+
+   <section class="section-habilidades">      
        <h2>Mis habilidades</h2> 
        <div class="circulo2"></div>
        <div class="circulo3"></div>
+   </section>     
        <br>
        <h2>Experiencia</h2>  
 
