ultimos cambios miercoles

--- a/index.html
+++ b/index.html
@@ -73,7 +73,19 @@
        <h2>Mis habilidades</h2> 
        <div class="circulo2"></div>
        <div class="circulo3"></div>
-   </section>     
+   </section>  
+   <section class="section-cuadros">
+     <div><h4>UX / UI Design</h4>
+      <p>Lorem ipsum dolor sit, <br> amet consectetur adipisicing elit.</p>       
+    </div>
+    <div><h4>UX / UI Design</h4>
+      <p>Lorem ipsum dolor sit, <br> amet consectetur adipisicing elit.</p>       
+    </div>
+    <div><h4>UX / UI Design</h4>
+      <p>Lorem ipsum dolor sit, <br> amet consectetur adipisicing elit.</p>       
+    </div>
+
+   </section>   
        <br>
        <h2>Experiencia</h2>  
 
