--- a/index.html
+++ b/index.html
@@ -73,18 +73,24 @@
        <h2>Mis habilidades</h2> 
        <div class="circulo2"></div>
        <div class="circulo3"></div>
-   </section>  
-   <section class="section-cuadros">
-     <div><h4>UX / UI Design</h4>
+   
+   <section class="contenedor-habilidades">
+     <div class="habilidades-card">
+       <img src="./assets/images/idea.png" alt="foco">
+       <h4>UX / UI Design</h4>
       <p>Lorem ipsum dolor sit, <br> amet consectetur adipisicing elit.</p>       
     </div>
-    <div><h4>UX / UI Design</h4>
-      <p>Lorem ipsum dolor sit, <br> amet consectetur adipisicing elit.</p>       
-    </div>
-    <div><h4>UX / UI Design</h4>
-      <p>Lorem ipsum dolor sit, <br> amet consectetur adipisicing elit.</p>       
-    </div>
-
+    <div class="habilidades-card">
+      <img src="./assets/images/regla.png" alt="foco">
+      <h4>UX / UI Design</h4>
+     <p>Lorem ipsum dolor sit, <br> amet consectetur adipisicing elit.</p>       
+   </div>
+   <div class="habilidades-card">
+    <img src="./assets/images/agenda.png" alt="foco">
+    <h4>UX / UI Design</h4>
+   <p>Lorem ipsum dolor sit, <br> amet consectetur adipisicing elit.</p>       
+ </div>
+ 
    </section>   
        <br>
        <h2>Experiencia</h2>  
