ultimos cambios jueves 8pm

--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 
 
 
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -50,10 +48,8 @@
         <br>
         <div class="logos"><img src="./assets/images/ant-design_twitter-outlined.svg" alt="logo-twitter"></div>
       </div>
-   
-      <div class="imagen-chica"><img src ="./assets/images/image.png" alt="foto-chava" class="encabezado"></div>
-   
       <div class="circulo1 encabezado"></div>
+      <div class="imagen-chica"><img src ="./assets/images/image.png" alt="foto-chava" class="encabezado"></div>
       </section>
   </header>
 
@@ -120,24 +116,29 @@
        <br>
 <section class="fondo-verde">
        <div class="fondo-fitness">
-          <div class="imagen-fitness"><img src="./assets/images/image 11.jpg" alt="fitness-app-imagen"></div> 
+          <div class="imagen-fitness">
+            <img src="./assets/images/image 11.jpg" alt="fitness-app-imagen">
+          </div> 
        </div>
 
        <section class="section section-portafolio">
        <h2>Portafolio</h2>
        <br>
        <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis accusamus quidem, 
-        alias voluptate iste animi dignissimos. </div>
+        alias voluptate iste animi dignissimos. 
+      </div>
       </section>
 
         <div class="fondo-fitness-2">
-          <div class="imagen-fitness"><img src="./assets/images/Rectangle 47.jpg" alt="fitness-app-imagen"></div> 
+          <div class="imagen-fitness"><img src="./assets/images/Rectangle 47.jpg" alt="fitness-app-imagen">
+          </div> 
            <p class="letra-caja-fitness">Management App</p>
            <br>
            <br>
           </div>
-        </div>
- </section>
+      </section>
+      
+
     
    <br>
    <section class="section section-contacto">
@@ -146,13 +147,17 @@
 
    <section class="contenedor-contacto">
    <div class="contenedor-4">
-     <div class="logos-grandes"><img src="./assets/images/phone 3.svg" alt="numero-celular"></div>
+     <div class="logos-grandes">
+       <img src="./assets/images/phone 3.svg" alt="numero-celular">
+      </div>
      <span class="titulos-verdes">Número celular</span>
      <span class="letras-grises">+52 4421730948</span>
    </div>
 
    <div class="contenedor-5">
-   <div class="logos-grandes"><img src="./assets/images/mail 3.svg" alt="mail"></div>
+   <div class="logos-grandes">
+     <img src="./assets/images/mail 3.svg" alt="mail">
+    </div>
    <span class="titulos-verdes" >Email</span>
    <span class="letras-grises">ximenabar96@gmail.com</span>
    </div>
