arreglando tamaño de letras experiencia y alineando

--- a/index.html
+++ b/index.html
@@ -100,13 +100,15 @@
     
       <div class="contenedor-2">
          <div><img src="./assets/images/cib_airbnb.svg" alt="logo-airbnb"></div>
-         <div class="letras-grises">Senior UX/UI<p>2017-2018</p></div>
+         <div><div><p class="años">Airbnb</p></div>
+         <div class="letras-grises">Senior UX/UI<p>2017-2018</p></div> </div>
          <div><p class="años">1 año</p></div>
       </div>
 
       <div class="contenedor-3">
          <div><img src="./assets/images/akar-icons_google-fill.svg" alt="logo-google"></div>
-         <div class="letras-grises">Product <br> designer<p>2018-Actualidad</p></div>
+         <div><div> <p class="años"> Google</p></div>
+         <div class="letras-grises">Product <br> designer<p>2018-Actualidad</p></div> </div>
          <div><p class="años">2 años</p></div>
        </div>
       </section>
