añadiendo anchors a barra de navegacion

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
  
         <ul>
             <li><a href="https://www.facebook.com" class="letras-home">Home</a></li>
-            <li><a href="">Acerca de mí</a></li>
-            <li><a href="">Mis habilidades</a></li>
-            <li><a href="">Experiencia</a></li>
-            <li><a href="">Portafolio</a></li>
-            <li><a href="">Contacto</a></li>
+            <li><a href="#acerca">Acerca de mí</a></li>
+            <li><a href="#habilidades">Mis habilidades</a></li>
+            <li><a href="#experiencia">Experiencia</a></li>
+            <li><a href="#portafolio">Portafolio</a></li>
+            <li><a href="#contacto">Contacto</a></li>
         </ul>
     </nav>
 
@@ -54,7 +54,7 @@
 <br>
 
   <section class="section section-acerca">
-      <h2>Acerca de mí</h2>
+      <a name="acerca" id="acerca"><h2>Acerca de mí</h2></a>
       <br>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis accusamus quidem, 
           alias voluptate iste animi dignissimos quis in corrupti sit nam doloribus tempore non 
@@ -64,7 +64,7 @@
           <br>
 
    <section class=" section section-habilidades">      
-       <h2><span>Mis &nbsp;</span> habilidades</h2> 
+    <a name="habilidades" id="habilidades"><h2><span>Mis &nbsp;</span> habilidades</h2></a>
        <div class="circulo2"></div>
        <div class="circulo3"></div>
    
@@ -88,7 +88,7 @@
 </section>
        <br>
        <section class="section section-experiencia">
-       <h2>Experiencia</h2>  
+        <a name="experiencia" id="experiencia"><h2>Experiencia</h2></a>
       <section class="contenedor-experiencia">
        <div class="contenedor-1">
           <div><img src="./assets/images/ant-design_amazon-outlined.svg" alt="logo-amazon"></div>
@@ -122,7 +122,7 @@
        </div>
 
        <section class="section section-portafolio">
-       <h2>Portafolio</h2>
+        <a name="portafolio" id="portafolio"> <h2>Portafolio</h2></a>
        <br>
        <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis accusamus quidem, 
         alias voluptate iste animi dignissimos. 
@@ -142,7 +142,7 @@
     
    <br>
    <section class="section section-contacto">
-   <h2>Contacto</h2>
+    <a name="contacto" id="contacto"><h2>Contacto</h2></a>
    <div class="circulo4"></div>
 
    <section class="contenedor-contacto">
