terminando estilo habilidades

--- a/index.html
+++ b/index.html
@@ -70,22 +70,28 @@
    
    <section class="contenedor-habilidades">
       <div class="habilidades-card">
-         <img src="./assets/images/idea.png" alt="foco">
-         <h4>UX / UI Design</h4>
+        <div class="parrafo">
+         <div><img src="./assets/images/idea.png" alt="foco"></div>
+         <div><h4>&nbsp;&nbsp;UX / UI Design</h4></div>
+         </div>
          <p>Lorem ipsum dolor sit, <br> amet consectetur adipisicing elit.</p> 
          <br>
          <br>      
       </div>
       <div class="habilidades-card">
-        <img src="./assets/images/regla.png" alt="foco">
-        <h4>UX / UI Design</h4>
+        <div class="parrafo">
+        <div><img src="./assets/images/regla.png" alt="foco"></div>
+        <div><h4>&nbsp;&nbsp;UX / UI Design</h4></div>
+        </div>
         <p>Lorem ipsum dolor sit, <br> amet consectetur adipisicing elit.</p>   
         <br>
         <br>    
       </div>
       <div class="habilidades-card">
-       <img src="./assets/images/agenda.png" alt="foco">
-       <h4>UX / UI Design</h4>
+        <div class="parrafo">
+       <div><img src="./assets/images/agenda.png" alt="foco"></div>
+       <div><h4>&nbsp;&nbsp;UX / UI Design</h4></div>
+       </div>
       <p>Lorem ipsum dolor sit, <br> amet consectetur adipisicing elit.</p>
       <br>
       <br>       
