--- a/index.html
+++ b/index.html
@@ -65,9 +65,10 @@
 
    <section class=" section section-habilidades">      
     <a name="habilidades" id="habilidades"><h2><span>Mis &nbsp;</span> habilidades</h2></a>
+    <div class="circulos-juntos"> 
        <div class="circulo2"></div>
        <div class="circulo3"></div>
-   
+    </div>
    <section class="contenedor-habilidades">
       <div class="habilidades-card">
         <div class="parrafo">
