--- a/index.html
+++ b/index.html
@@ -64,11 +64,13 @@
           <br>
 
    <section class=" section section-habilidades">      
-    <a name="habilidades" id="habilidades"><h2><span>Mis &nbsp;</span> habilidades</h2></a>
-    <div class="circulos-juntos"> 
-       <div class="circulo2"></div>
-       <div class="circulo3"></div>
-    </div>
+    <a name="habilidades" id="habilidades"><h2><span>Mis&nbsp;</span> habilidades</h2></a>
+   
+       <div class="circulo2">
+         <div class="circulo3">
+         </div>
+       </div>
+       
    <section class="contenedor-habilidades">
       <div class="habilidades-card">
         <div class="parrafo">
