encimando circulos correctamente

--- a/index.html
+++ b/index.html
@@ -139,11 +139,12 @@
        </div>
 
        <section class="section section-portafolio">
+        <br><br>
         <a name="portafolio" id="portafolio"> <h2 class="titulo-portafolio">Portafolio</h2></a>
        <br>
        <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis accusamus quidem, 
         alias voluptate iste animi dignissimos. 
-      </div>
+      </div> <br><br><br>
       </section>
 
       
