ultimos cambios jueves

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
      </label>
  
         <ul>
-            <li><a href="https://www.facebook.com" class="letras-home">Home</a></li>
+            <li><a href="file:///Users/bamena/Desktop/ACADEMLO/fundamentosmayo/proyectoXimena/index.html" class="letras-home">Home</a></li>
             <li><a href="#acerca">Acerca de mí</a></li>
             <li><a href="#habilidades">Mis habilidades</a></li>
             <li><a href="#experiencia">Experiencia</a></li>
@@ -128,7 +128,7 @@
     </section>
 
   
-       <br>
+       <br><br>
 <section class="fondo-verde">
   <div class="contenedor-fitness-1">
        <div class="fondo-fitness">
@@ -160,7 +160,7 @@
           </div>
       </section>
     
-   <br><br><br>
+   <br><br><br><br>
    <section class="section section-contacto">
     <a name="contacto" id="contacto"><h2>Contacto</h2></a>
    <div class="circulo4"></div>
