ultimos cambios lunes 4 julio

--- a/index.html
+++ b/index.html
@@ -56,10 +56,8 @@
   <section class="section section-acerca">
       <a name="acerca" id="acerca"><h2>Acerca de mí</h2></a>
       <br>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis accusamus quidem, 
-          alias voluptate iste animi dignissimos quis in corrupti sit nam doloribus tempore non 
-          necessitatibus ullam? Consequuntur nihil odit aliquid sint error beatae enim ut,
-          quaerat perspiciatis ducimus culpa.</p>
+      <p>Me llamo Ximena y soy queretana. Estudié Economía en la UNAM y tengo la fortuna de saber volar, pues también soy Piloto Comercial. Tengo un gran interés por las artes, me gustan los retos, resolver problemas de manera creativa
+        y desarrollar ideas nuevas. Puedo expresarme de la misma manera en inglés como en español, con fotografía y páginas web.</p>
    </section>
           <br>
 
